tests/suite/snapshots/suite__check__tests__check__bad_null_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_null_2.xi:2:15]
   │
 2 │     b: bool = null
   ·     ───┬───   ──┬─  
   ·        ╰──────────── Expected bool because of this
   ·                 │   
   ·                 ╰─── Expected bool but found null
───╯

